[package]

name    = "sdl2-examples"
version = "0.0.1"
authors = [ "jdeseno" ]

[[bin]]

name = "eg01"
path = "src/eg01.rs"

[[bin]]

name = "eg02"
path = "src/eg02.rs"

[[bin]]

name = "eg03"
path = "src/eg03.rs"

[[bin]]

name = "eg04"
path = "src/eg04.rs"

[[bin]]

name = "eg05"
path = "src/eg05.rs"

[[bin]]

name = "eg06"
path = "src/eg06.rs"

[[bin]]

name = "eg07"
path = "src/eg07.rs"

[dependencies]
sdl2 = "0.18"
sdl2_image = "0.18.0"
sdl2_ttf = "0.16.2"
